# wireguard_py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pypi_release.yml
tests/: wireguard_test.py
wireguard_py/: __init__.py  wgpy.py  wireguard_common.py  wireguard_py.pxd  wireguard_py.pyi  wireguard_py.pyx
wireguard_py/wireguard_tools/: wireguard.c  wireguard.h
